# YYSportEditer

./: CMakeLists.txt  PlayerDemo.cpp  PlayerDemo.h  Readme.txt  VideoCacheThread.cpp  VideoWidget.cpp  VideoWidget.h  YYSportEditer.pro  main.cpp
include/libopenshot/: OpenShotVersion.h  QtPlayer.h
include/libopenshot-audio/: AppConfig.h  JuceHeader.h
include/libopenshot/Qt/: PlayerDemo.h.bak
lib/: libopenshot-audio.dylib
lib/mac/: libgomp.1.dylib  libopenshot-audio.0.1.8.dylib  libopenshot.0.2.3.dylib  libopenshot.17.dylib
others/: libopenshot-mac-build.txt
